syntax = "proto3";

package product.v1;

option go_package = "soda-interview/foundation/proto/product/v1;productv1";

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  int64 price = 4;
  int32 buyer_reward_points = 5;
  // author_reward_points is internal and not exposed.
}

message ProductRequest {
  string id = 1;
}

message ProductList {
  repeated Product products = 1;
}

message Empty {}

service ProductService {
  rpc GetProduct(ProductRequest) returns (Product);
  rpc ListProducts(Empty) returns (ProductList);
}
